--- a/wp-content/themes/helfen-helfen/dev-assets/css/theme.css
+++ b/wp-content/themes/helfen-helfen/dev-assets/css/theme.css
@@ -8023,7 +8023,6 @@ main.page h2 {
   color: #000;
   padding: 30px 0;
   width: 100%;
-  max-width: 500px;
   z-index: 1;
   margin: 80px auto;
   align-self: center;
@@ -8051,6 +8050,8 @@ main.page h2 {
 
 .wp-block-media-text.roundimage img {
   border-radius: 100%; }
+.wp-block-media-text.has-media-on-the-right {
+  grid-template-columns: 1fr 35%; }
 
 .wp-block-gallery a {
   overflow: hidden; }
